Bug 368499 - Panel option "windows can cover" doesn't work on wayland
Summary: Panel option "windows can cover" doesn't work on wayland
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: wayland-generic (other bugs)
Version First Reported In: git master
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL: https://phabricator.kde.org/D2788
Keywords:
Depends on:
Blocks:
 
Reported: 2016-09-09 14:27 UTC by Max Harmathy
Modified: 2016-09-16 12:59 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:
mgraesslin: ReviewRequest+


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Max Harmathy 2016-09-09 14:27:13 UTC
Running kde-neon devel unstable:
The panel option "windows can cover", which allows normal windows to be placed over the panel, does not work when running on wayland.  

Reproducible: Always

Steps to Reproduce:
1. Open panel options, "more options" and select "Windows Can Cover"
2. Open an arbitrary window and place it above the panel


Actual Results:  
Window slides under the panel

Expected Results:  
Window covers the panel
Comment 1 Martin Flöser 2016-09-15 12:20:17 UTC
KWin part: https://phabricator.kde.org/D2788

But I think Plasma doesn't hook the panel behavior up yet, so it doesn't do anything yet.
Comment 2 Martin Flöser 2016-09-15 12:54:46 UTC
And for Plasma https://phabricator.kde.org/D2789
Comment 3 Martin Flöser 2016-09-16 12:30:41 UTC
Git commit 7d93b585789f680e09f7d100a2b1ba1a2a182f56 by Martin Gräßlin.
Committed on 16/09/2016 at 12:30.
Pushed by graesslin into branch 'Plasma/5.8'.

Fix whether a panel is supposed to have a strut in ShellClient

Summary:
The PanelBehavior was incorrectly mapped to hasStrut resulting in too
many modes creating a strut for the panel.

Reviewers: #kwin, #plasma_on_wayland

Subscribers: plasma-devel, kwin

Tags: #plasma_on_wayland, #kwin

Differential Revision: https://phabricator.kde.org/D2788

M  +48   -0    autotests/integration/plasma_surface_test.cpp
M  +1    -1    shell_client.cpp

http://commits.kde.org/kwin/7d93b585789f680e09f7d100a2b1ba1a2a182f56
Comment 4 Martin Flöser 2016-09-16 12:59:11 UTC
Git commit f0300cec3cbb5e2c3605d89a68a921ff2c90dd2c by Martin Gräßlin.
Committed on 16/09/2016 at 12:58.
Pushed by graesslin into branch 'Plasma/5.8'.

[shell] Pass the panel visibility mode to KWayland PanelBehavior

Summary:
The visibility mode needs to be passed to KWayland by mapping to the
PanelBehavior. This is required to pass the correct hint to KWin to
adjust the layering, etc.

Reviewers: #plasma

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D2789

M  +27   -0    shell/panelview.cpp
M  +1    -0    shell/panelview.h

http://commits.kde.org/plasma-workspace/f0300cec3cbb5e2c3605d89a68a921ff2c90dd2c